# backend/src/routes/index.ts
@@ -2,6 +2,7 @@ import { Router } from "express";
 
 import authRoutes from "./auth.routes";
 import friendRoutes from "./friend.routes";
+import documentRoutes from "./document.routes";
 
 const router = Router();
 
@@ -10,5 +11,8 @@ router.use("/auth", authRoutes);
 
 // Friend routes
 router.use("/friends", friendRoutes);
+
+// Document routes
+router.use("/documents", documentRoutes);
 
 export default router;
